blocks/profile.css
.profile {
  display: flex;
  max-width: 880px;
  padding-top: 40px;
  align-items: center;
}

.profile__info {
  display: grid;
  grid-template-areas:
    "title button"
    "description description";
  grid-gap: 9px 17px;
  grid-template-columns: minmax(auto, 373px) auto;
  align-items: baseline;
  margin-left: 30px;
}

.profile__edit-button {
  background: transparent url(../images/edit-button.svg) center no-repeat;
  height: 24px;
  width: 24px;
  grid-area: button;
  border: 1px solid #FFFFFF;
}

.profile__edit-button:hover{
  opacity: 0.6;
  cursor: pointer;
}

.profile__add-button {
  background: transparent url(../images/add-icon.svg) center no-repeat;
  width: 150px;
  height: 50px;
  margin-left: auto;
  border: 2px solid #FFFFFF;
  border-radius: 2px;
}

.profile__add-button:hover {
  opacity: 0.6;
  cursor: pointer;
}

.profile__title {
  font-size: 42px;
  line-height: 48px;
  font-weight: 500;
  grid-area: title;
  margin: 0;
  white-space: nowrap;
}

.profile__description {
  font-size: 18px;
  line-height: 22px;
  font-weight: 400;
  grid-area: description;
  margin: 0;
}

.profile__image {
  height: 120px;
  width: 120px;
  border-radius: 50%;
  object-fit: cover;
  background-position: center;
}

@media screen and (max-width: 800px) and (max-width: 1120px) {
  .profile {
    flex-direction: column;
  }

  .profile__title {
    font-size: 22px;
    line-height: 26.63px;
    text-align: center;
  }

  .profile__info {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    width: 100%;
    max-width: 320px;
    padding: 30px;
    
  }

  .profile__description {
    width: 100%;
    font-size: 14px;
    line-height: 16.94px;
    text-align: center;
    padding: 14px 0px 36px 0px;
  }

  .profile__add-button {
    width: 100%;
    max-width: 282px;
    margin: 0 auto;
  }
}

@media screen and (max-width: 480px) {
  .profile__info {
  width: 100%;
  max-width: 320px;
  padding: 30px 0;
  align-items: center;
  flex-wrap: wrap;
  flex-direction: row;
  margin: 0;
  }
  .profile__edit-button {
    height: 17px;
    width: 17px;
  }
}

